# BlockStruct

./: .gitignore  Block.py  BlockStruct.py  BlockTypes.py  Costume.py  Project.py  README.md  Script.py  Sprite.py  id.py  pyproject.toml  requirements.txt
src/BlockStruct/: __init__.py  main.py
