[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BlockStruct"
version = "0.1.0"
description = "Make scratch scripts in python and save to files or upload to scratch"
authors = [
    { name = "PolyPenguin", email = "polypenguindev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pillow==11.2.1",
    "scratchattach==2.1.13",
    "requests==2.32.3"
]